tests/ui/typeck/conversion/implicit_conversion_event_to_bytes4_function_argument.sol
//@compile-flags: -Ztypeck
contract MyContract {
    event MyCustomEvent(uint256);
    function f(bytes4 arg) public {}
    function test() public {
        f(MyCustomEvent); //~ ERROR: not yet implemented
    }
}
